fixed some more navbar alignment issues. started ResumeList page. Stuff on resume list isn't aligned I was messing between using MUI vs regular html/CSS

--- a/FrontEnd/src/styles/Navbar.css
+++ b/FrontEnd/src/styles/Navbar.css
@@ -1,60 +1,70 @@
 #navbar {
     position: sticky;
-    display: flex;
     top: 0;
     width: 100%;
     height: 60px;
     background: rgba(255, 255, 255, 0.40);
     border-bottom: 1px solid black;
-    align-items: center;
-    justify-content: space-between;
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr; /* Left, center, right */
+    /* align-items: center; */
+    /* justify-content: space-between;  */
   }
 
 #account_buttons{
     display: flex;
     justify-content: flex-end; /* Align items from right to left */
     align-items: center;
-    border-left: 1px solid black; /* Add border on the right edge */
+    /* border-left: 1px solid black;  */
     padding-left: 10px; /* Optional: Add some padding on the left */
     padding-right: 10px; /* Optional: Add some padding on the right */
 }
 
 #logo_name{
     display: flex;
+    flex-direction: row;
+    justify-content: center;
     align-items: center;
     /* margin-right: auto; */
+    margin-left: 5px;
+    height: 100%;
+    width: auto;
+    text-decoration: none;
+    justify-self: start;
 }
 
 #logo {
-    position: absolute;
-    height: 80%;
-    width: auto;
-    color: #AC1AC3;
-    top: 50%;
-    -ms-transform: translateY(-50%);
-    transform: translateY(-50%);   
-    margin-left: 5px;
+    /* position: absolute; */
+    height: 2em; 
+    width: 2em;
+    padding-right: 10px;
+    align-self: center;
+    /* color: #AC1AC3; */
+    /* top: 50%; */
+    /* -ms-transform: translateY(-50%);
+    transform: translateY(-50%);    */
 }
 
 #brand_name {
     margin: 0;
-    position: absolute;
-    top: 50%;
-    left: 60px; 
-    transform: translateY(-50%); 
+    display: inline;
+    /* position: absolute; */
+    /* top: 50%;
+    left: 60px;  */
+    /* transform: translateY(-50%);  */
     color: #000;
     font-family: Inter;
-    font-size: 30px;
+    font-size: 2em;
     font-style: normal;
     font-weight: 400;
     line-height: normal;
+    text-decoration: none;
 }
 
 #profile_icon {
     position: relative;
-    width: 50px;
-    height: 50px;
-
+    width: 2em;
+    height: 2em;
     display: flex;
     align-items: center; /* Center items vertically */
     justify-content: center;
@@ -88,6 +98,8 @@
     align-items: center;
     height: 100%;
     width: 25%;
+    justify-self: center;
+    left: 50%;
 }
 
 .nav_link {
@@ -95,7 +107,7 @@
     flex-direction: column; 
     justify-content: center;
     align-items: center;
-    margin-right: 20px;
+    margin-right: 50px;
     text-decoration: none; /* Remove underline */
     color: inherit; /* Use the default text color */
 }
